# ansible-users

./: .gitignore  .pre-commit-config.yaml  README.md  galaxy.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
roles/users/: README.md
roles/users/defaults/: main.yml
roles/users/files/: test.key.pub
roles/users/meta/: main.yml
roles/users/molecule/default/: converge.yml  molecule.yml
roles/users/tasks/: main.yml
