[tool.poetry]
name = "aorfanos.server_utils"
version = "0.0.1"
description = "An Ansible collection for the most common configuration options for VMs/servers."
authors = ["Alex Orfanos <me@aorfanos.com>"]

[tool.poetry.dependencies]
python = "^3.8"
molecule-docker = "^2.0.0"
pre-commit = "^2.20.0"
ansible = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
